--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.5.21"
+    ext.nav_version = "2.3.3"
     repositories {
         google()
         mavenCentral()
@@ -8,6 +9,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,6 +22,17 @@ allprojects {
         mavenCentral()
         jcenter() // Warning: this repository is going to shut down soon
     }
+}
+
+ext{
+    rxjava = "3.0.1"
+    rxkotlin = "3.0.0"
+    rxandroid = "3.0.0"
+    retrofit = "2.9.0"
+    gson = "2.8.6"
+    logging_intercepto = "4.6.0"
+    preference_version = "1.2.0"
+
 }
 
 task clean(type: Delete) {
